--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.7.2",
+    "axios": "^1.6.0",
     "classnames": "^2.3.2",
     "next": "^13.5.6",
     "react": "^18",
