--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "classnames": "^2.3.2",
     "next": "^13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
