--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "react-multi-date-picker": "^4.4.1",
     "swiper": "^11.0.3"
   },
   "devDependencies": {
