--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.2",
     "@tanstack/react-query": "^5.7.2",
+    "@types/negotiator": "^0.6.3",
     "axios": "^1.6.0",
     "classnames": "^2.3.2",
+    "negotiator": "^0.6.3",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "react": "^18",
