--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "negotiator": "^0.6.3",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
